--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
                    <li><a href="why-west-africa.html">Why West Africa & Turkey</a></li>
                    <li><a href=#>Company Info</a></li>
                    <li><a href=#>info@caravansarycapital.com</a></li>
-                   <li>Phone: +961 123 456</li>
+                   <li class="phone">Phone: +961 123 456</li>
                    <li class="social-icons">
-                       <a href="#"></a>
+                       <a href="#" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                       <a href="#" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                       <a href="#" title="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
                    </li>  
                 </ul>
             </div>
-
         </div>
 
     </footer>
