--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <section class="hero">
 
-        <video autoplay muted loop id="hero-video">
+        <video autoplay muted loop id="hero-video" playsinline>
             <source src="images/12831782_1080_1920_30fps.mp4" type="video/mp4">
             Your browser does not support the video tag
         </video>
