--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 <body>
     <nav class="navbar">
 
-        <div class="logo"><a href="#">CaravansaryCapital</a></div>
+        <div class="logo">
+            <a href="#">
+                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+            </a>
+        </div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
         <ul class="nav-links">
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Our projects</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Investor Relations</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">News & insights</a></li>
+            <li><a href="#">Investor Opportunities</a></li>
+            <li><a href="#">Contact Forms</a></li>
+            <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
     
@@ -45,6 +48,23 @@
         
     </section>
 
+    <section class="about-us">
+
+        <div class="about-container">
+            <h2>Welcome to Caravansary Capital</h2>
+            <p>
+                A visionary investment firm dedicated to facilitating dynamic trade and industrial 
+                expansion between West Africa and Turkey. Our mission is to connect businesses, 
+                industries, and stakeholders through a strategic network of trade and industrial 
+                platforms, fostering sustainable economic growth.
+            </p>
+            <p>
+                To explore investment opportunities and strategic partnerships,
+                <a href="contact.html" class="contact-link">please contact us directly</a>.
+            </p>
+        </div>
+    </section>
+
     <footer>
 
         <div class="footer-container">
@@ -54,14 +74,13 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor-relations.html">Investor Relations</a></li>
-                    <li><a href="inverstor-relations.html">News & Insights</a></li>
+                    <li><a href="inverstor-relations.html">Investor Opportunities</a></li>
+                    <li><a href="inverstor-relations.html">Contact Forms</a></li>
                     <li><a href="inverstor-relations.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-info">
                 <ul>
-                   <li><a href="why-west-africa.html">Why West Africa & Turkey</a></li>
                    <li><a href=#>Company Info</a></li>
                    <li><a href=#>info@caravansarycapital.com</a></li>
                    <li class="phone">Phone: +961 123 456</li>
