--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
      <nav class="navbar">
 
         <div class="logo">
-            <a href="#">
+            <a href="index.html">
                 <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
@@ -20,7 +20,7 @@
 
         <ul class="nav-links">
             <li><a href="about-us.html">About Us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Investor Opportunities</a></li>
             <li><a href="#">Contact Forms</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -68,9 +68,9 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor-relations.html">Investor Opportunities</a></li>
-                    <li><a href="inverstor-relations.html">Contact Forms</a></li>
-                    <li><a href="inverstor-relations.html">Contact Us</a></li>
+                    <li><a href="inverstor-opportunities.html">Investor Opportunities</a></li>
+                    <li><a href="contact-forms.html">Contact Forms</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-info">
