added more pages and designs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav-links">
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Investor Opportunities</a></li>
+            <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="#">Contact Forms</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
@@ -74,7 +74,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor-opportunities.html">Investor Opportunities</a></li>
+                    <li><a href="inverstor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
