--- a/services.html
+++ b/services.html
@@ -21,11 +21,31 @@
         <ul class="nav-links">
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Investor Opportunities</a></li>
+            <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="#">Contact Forms</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
+
+    <section class="services">
+
+        <div class="services-container">
+            <h1>Our Services</h1>
+            <div class="services-content">
+                <p>We provide a range of investment and business facilitation services, including:</p>
+                <ul>
+                    <li>Strategic trade facilitation between Turkey and West Africa</li>
+                    <li>Industrial development and investment structuring</li>
+                    <li>Business networking and market expansion support</li>
+                    <li>Tailored investment opportunities for qualified investors</li>
+                </ul>
+                <p class="call-to-action">
+                    For detailed insights into our projects and services, we invite serious investors to engage with us directly.
+                </p>
+            </div>
+        </div>
+
+    </section>
 
     <footer>
 
@@ -36,7 +56,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor-opportunities.html">Investor Opportunities</a></li>
+                    <li><a href="investor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
