--- a/investor.html
+++ b/investor.html
@@ -22,8 +22,8 @@
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
-            <li><a href="#">Contact Forms</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact-forms.html">Contact Forms</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -59,14 +59,14 @@
             </div>
             <div class="footer-info">
                 <ul>
-                   <li><a href=#>Company Info</a></li>
-                   <li><a href=#>info@caravansarycapital.com</a></li>
-                   <li class="phone">Phone: +961 123 456</li>
-                   <li class="social-icons">
-                       <a href="#" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                       <a href="#" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                       <a href="#" title="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
-                   </li>  
+                    <li><a href="contact-us.html">Company Info</a></li>
+                    <li><a href=#>info@caravansarycapital.com</a></li>
+                    <li class="phone">Phone: +961 123 456</li>
+                    <li class="social-icons">
+                        <a href="#" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="#" title="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
+                    </li>  
                 </ul>
             </div>
         </div>
