Edited the website

--- a/contact-forms.html
+++ b/contact-forms.html
@@ -132,7 +132,7 @@
 
                 <div class="form-group checkbox">
                     <input type="checkbox" id="is-condidentiality" name="confidentiality" required>
-                    <label for="is-condidentiality">I agree that investment details will be disclosed folllowing a private discusiion and NDA agreement.</label>
+                    <label for="is-condidentiality">I agree that investment details will be disclosed folllowing a private discussion and NDA agreement.</label>
                 </div>
 
                 <button type="submit" class="submit-btn">Submit</button>
@@ -143,7 +143,7 @@
         <!-- 3. Strategic Partnership Form -->
         <div class="form-section" id="strategic-partnership">
 
-            <h2>Strategic Partnership Forn</h2>
+            <h2>Strategic Partnership Form</h2>
             <form>
                 <div class="form-group">
                     <label for="sp-company">Company Name &amp; Website</label>
