--- a/investor.html
+++ b/investor.html
@@ -39,6 +39,10 @@
             <p class="cta">
                 To inquire about investment opportunities, please contact our team for a private discussion.
             </p>
+
+            <div class="investor-link">
+                <a href="/contact-forms.html#investor-screening" class="btn-investor">Apply for Investor Screeening</a>
+            </div>
         </div>
 
     </section>
