--- a/services.html
+++ b/services.html
@@ -40,8 +40,13 @@
                     <li>Tailored investment opportunities for qualified investors</li>
                 </ul>
                 <p class="call-to-action">
-                    For detailed insights into our projects and services, we invite serious investors to engage with us directly.
+                    For detailed insights into our projects and services, we invite serious investors and strategic partners to engage with us directly.
                 </p>
+
+                <div class="services-link">
+                    <a href="/contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
+                    <a href="/contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
+                </div>
             </div>
         </div>
 
