--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
-            <li><a href="contact-forms.html">Contact Forms</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="learn-more.html">Learn More About Us</a></li>
+            <li><a href="explore.html">Explore Opportunities</a></li>
+            <li><a href="contact-forms.html">Contact Us</a></li>
         </ul>
     </nav>
     
@@ -68,10 +69,12 @@
     <footer>
 
         <div class="footer-container">
+
             <div class="footer-brand">
                 <h2>Caravansary Capital</h2>
                 <p>Bridging Continents, Building Opportunities</p>
             </div>
+
             <div class="footer-links">
                 <ul>
                     <li><a href="inverstor.html">Investor Opportunities</a></li>
@@ -79,6 +82,7 @@
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
+
             <div class="footer-info">
                 <ul>
                     <li><a href="contact-us.html">Company Info</a></li>
@@ -91,6 +95,16 @@
                     </li>  
                 </ul>
             </div>
+
+            <div class="footer-legal">
+                <ul>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                    <li><a href="fraud-alert.html">Fraud Alert</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="nda-agreement.html">NDA Agreement</a></li>
+                </ul>
+            </div>
+
         </div>
 
     </footer>
