Added more legal pages and other pages

--- a/pages/investor.html
+++ b/pages/investor.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Investor Opportunities</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -23,36 +23,28 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="contact-forms.html">Contact Forms</a></li>
-            <li><a href="contact-forms.html">Contact Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
 
-    <section class="contact-us">
+    <section class="investor-opportunities">
 
-        <div class="contact-container">
-            <h1>Contact Us</h1>
+        <div class="investor-container">
+            <h1>Investor Opportunities</h1>
             <p>
-                For partnership inquiries, investment discussions, and strategic collaborations, reach out to us:
+                Caravansary Capital presents curated investment opportunities designed for long-term growth
+                and strategic impact. We focus on high-value sectors with significant economic potential. Due to
+                the nature of our projects, investment details are shared selectively with qualified investors.
             </p>
-            <div class="contact-info">
+            <p class="cta">
+                To inquire about investment opportunities, please contact our team for a private discussion.
+            </p>
 
-                <div class="info-item">
-                    <h3>Contact Form</h3>
-                    <p><a href="contact-forms.html" class="contact-link">Get in Touch</a></p>
-                </div>
-                
-                <div class="info-item">
-                    <h3>Email</h3>
-                    <p><a href="mailto.info@caravansarycapital.com">info@caravansarycapial.com</a></p>
-                </div>
-
-                <div class="info-item">
-                    <h3>Phone</h3>
-                    <p><a href="tel:+961 123 456">+961 123 456</a></p>
-                </div>
-
+            <div class="investor-link">
+                <a href="/contact-forms.html#investor-screening" class="btn-investor">Apply for Investor Screeening</a>
             </div>
         </div>
+
     </section>
 
     <footer>
