--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investor Opportunities</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Us Page</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -27,22 +27,34 @@
         </ul>
     </nav>
 
-    <section class="investor-opportunities">
+    <section class="about-page">
 
-        <div class="investor-container">
-            <h1>Investor Opportunities</h1>
+        <div class="about-container1">
+            <h1>About Us</h1>
             <p>
-                Caravansary Capital presents curated investment opportunities designed for long-term growth
-                and strategic impact. We focus on high-value sectors with significant economic potential. Due to
-                the nature of our projects, investment details are shared selectively with qualified investors.
+                Caravansary Capital is built on a legacy of entrepreneurial expertise and deep regional knowledge,
+                offering investors and businesses exclusive access to high-potential markets. Our approach integrates trade,
+                industrial development, and investment facilitation to unlock new frontiers of economic collaboration.
             </p>
-            <p class="cta">
-                To inquire about investment opportunities, please contact our team for a private discussion.
+            <p>
+                Our team is committed to bridging opportunities between manufacturers, exporters, and key industries,
+                ensuring seamless business operations through our specialized platforms. With a focus on sustainable and scalable models,
+                we create investment opportunities designed for long-term growth.
             </p>
 
-            <div class="investor-link">
-                <a href="/contact-forms.html#investor-screening" class="btn-investor">Apply for Investor Screeening</a>
-            </div>
+            <h2>Our Vision &amp; Mission</h2>
+            <p><strong>Vision:</strong> <i>"To create a seamless trade ecosystem that empowers businesses and drives sustainable growth across continents.</i>"</p>
+            <p><strong>Mission:</strong> <i>"To establish state-of-the-art trade centers and industrial parks that facilitate collaboration, innovation, and prosperity.</i></p>
+
+            <h2>Core Values</h2>
+            <ul>
+                <li>Trust</li>
+                <li>Innovation</li>
+                <li>Collaboration</li>
+                <li>sustainability</li>
+            </ul>
+
+            <a href="team.html" class="team-link">Our Team</a>
         </div>
 
     </section>
@@ -56,7 +68,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor.html">Investor Opportunities</a></li>
+                    <li><a href="investor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
