--- a/pages/contact-forms.html
+++ b/pages/contact-forms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Forms</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
