--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -27,29 +27,32 @@
         </ul>
     </nav>
 
-    <section class="services">
+    <section class="contact-us">
 
-        <div class="services-container">
-            <h1>Our Services</h1>
-            <div class="services-content">
-                <p>We provide a range of investment and business facilitation services, including:</p>
-                <ul>
-                    <li>Strategic trade facilitation between Turkey and West Africa</li>
-                    <li>Industrial development and investment structuring</li>
-                    <li>Business networking and market expansion support</li>
-                    <li>Tailored investment opportunities for qualified investors</li>
-                </ul>
-                <p class="call-to-action">
-                    For detailed insights into our projects and services, we invite serious investors and strategic partners to engage with us directly.
-                </p>
+        <div class="contact-container">
+            <h1>Contact Us</h1>
+            <p>
+                For partnership inquiries, investment discussions, and strategic collaborations, reach out to us:
+            </p>
+            <div class="contact-info">
 
-                <div class="services-link">
-                    <a href="/contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
-                    <a href="/contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
+                <div class="info-item">
+                    <h3>Contact Form</h3>
+                    <p><a href="contact-forms.html" class="contact-link">Get in Touch</a></p>
                 </div>
+                
+                <div class="info-item">
+                    <h3>Email</h3>
+                    <p><a href="mailto.info@caravansarycapital.com">info@caravansarycapial.com</a></p>
+                </div>
+
+                <div class="info-item">
+                    <h3>Phone</h3>
+                    <p><a href="tel:+961 123 456">+961 123 456</a></p>
+                </div>
+
             </div>
         </div>
-
     </section>
 
     <footer>
@@ -61,7 +64,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="investor.html">Investor Opportunities</a></li>
+                    <li><a href="inverstor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
