--- a/pages/services.html
+++ b/pages/services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Services</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -27,34 +27,27 @@
         </ul>
     </nav>
 
-    <section class="about-page">
+    <section class="services">
 
-        <div class="about-container1">
-            <h1>About Us</h1>
-            <p>
-                Caravansary Capital is built on a legacy of entrepreneurial expertise and deep regional knowledge,
-                offering investors and businesses exclusive access to high-potential markets. Our approach integrates trade,
-                industrial development, and investment facilitation to unlock new frontiers of economic collaboration.
-            </p>
-            <p>
-                Our team is committed to bridging opportunities between manufacturers, exporters, and key industries,
-                ensuring seamless business operations through our specialized platforms. With a focus on sustainable and scalable models,
-                we create investment opportunities designed for long-term growth.
-            </p>
+        <div class="services-container">
+            <h1>Our Services</h1>
+            <div class="services-content">
+                <p>We provide a range of investment and business facilitation services, including:</p>
+                <ul>
+                    <li>Strategic trade facilitation between Turkey and West Africa</li>
+                    <li>Industrial development and investment structuring</li>
+                    <li>Business networking and market expansion support</li>
+                    <li>Tailored investment opportunities for qualified investors</li>
+                </ul>
+                <p class="call-to-action">
+                    For detailed insights into our projects and services, we invite serious investors and strategic partners to engage with us directly.
+                </p>
 
-            <h2>Our Vision &amp; Mission</h2>
-            <p><strong>Vision:</strong> <i>"To create a seamless trade ecosystem that empowers businesses and drives sustainable growth across continents.</i>"</p>
-            <p><strong>Mission:</strong> <i>"To establish state-of-the-art trade centers and industrial parks that facilitate collaboration, innovation, and prosperity.</i></p>
-
-            <h2>Core Values</h2>
-            <ul>
-                <li>Trust</li>
-                <li>Innovation</li>
-                <li>Collaboration</li>
-                <li>sustainability</li>
-            </ul>
-
-            <a href="team.html" class="team-link">Our Team</a>
+                <div class="services-link">
+                    <a href="/contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
+                    <a href="/contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
+                </div>
+            </div>
         </div>
 
     </section>
