Fixed the footer and the content

--- a/pages/explore-opportunities.html
+++ b/pages/explore-opportunities.html
@@ -30,11 +30,17 @@
     <section class="explore-opportunities-page">
 
         <header class="explore-header">
-            <h1 class="explore-main-title">Explore Opportunities with Caravansary Capital</h1>
+            <h1 class="explore-main-title">Explore Opportunities</h1>
         </header>
 
         <section class="explore-opportunities-list">
-            <h2 class="explore-section-title explore-content">Unlock Exclusive Investment Opportunities</h2>
+        <div class="explore-heading">
+            <h2 class="explore-section-title">Unlock Exclusive Investment Opportunities with Caravansary Capital</h2>
+            <p class="explore-intro">
+                At Caravansary Capital, we bridge gaps, creating dynamic trade, industrial, and hospitality
+                ventures. Our curated investment opportunities span:
+            </p>
+        </div>
             <div class="explore-opportunity-cards">
                 <div class="explore-opportunity-card">
                     <h3 class="explore-card-title">Caravansary Trade Centers</h3>
@@ -76,8 +82,8 @@
         </section>
 
         <section class="explore-cta">
-            <h2 class="explore-section-title">Join Us in Shaping the Future</h2>
-            <h2 class="explore-cta-button">More Information & Schedule a Private Briefing</h2>
+            <h2 class="explore-section-title explore-cta-button">Discover how you can be part of this transformative vision.</h2>
+            <h2 class="explore-cta-button">Request More Information &amp; Schedule a Private Briefing</h2>
         </section>
         
     </section>
