--- a/pages/investor.html
+++ b/pages/investor.html
@@ -50,10 +50,12 @@
     <footer>
 
         <div class="footer-container">
+
             <div class="footer-brand">
                 <h2>Caravansary Capital</h2>
                 <p>Bridging Continents, Building Opportunities</p>
             </div>
+
             <div class="footer-links">
                 <ul>
                     <li><a href="inverstor.html">Investor Opportunities</a></li>
@@ -61,6 +63,7 @@
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
+
             <div class="footer-info">
                 <ul>
                     <li><a href="contact-us.html">Company Info</a></li>
@@ -73,6 +76,16 @@
                     </li>  
                 </ul>
             </div>
+
+            <div class="footer-legal">
+                <ul>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                    <li><a href="fraud-alert.html">Fraud Alert</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="nda-agreement.html">NDA Agreement</a></li>
+                </ul>
+            </div>
+
         </div>
 
     </footer>
