--- a/pages/nda-agreement.html
+++ b/pages/nda-agreement.html
@@ -40,11 +40,11 @@
 
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">1. Purpose</h2>
-            The Disclosing Party possesses certain confidential and proprietary information relating to its business operations, strategies, projects, financials, and investment opportunities, including but not limited to the Caravansary Trade Centers, Caravansary Industrial Parks, and Caravansary MICE City (collectively, the "Confidential Information"). The Receiving Party wishes to evaluate a potential investment in the Disclosing Party, and both parties desire to ensure the protection of the Confidential Information disclosed in connection with this evaluation.
+            <p>The Disclosing Party possesses certain confidential and proprietary information relating to its business operations, strategies, projects, financials, and investment opportunities, including but not limited to the Caravansary Trade Centers, Caravansary Industrial Parks, and Caravansary MICE City (collectively, the "Confidential Information"). The Receiving Party wishes to evaluate a potential investment in the Disclosing Party, and both parties desire to ensure the protection of the Confidential Information disclosed in connection with this evaluation.</p>
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">2. Definition of Confidential Information</h2>
-            For the purposes of this Agreement, "Confidential Information" shall mean any and all business, technical, financial, or proprietary information disclosed by the Disclosing Party to the Receiving Party, whether in written, oral, electronic, or other tangible or intangible form, including but not limited to:
+            <p>For the purposes of this Agreement, "Confidential Information" shall mean any and all business, technical, financial, or proprietary information disclosed by the Disclosing Party to the Receiving Party, whether in written, oral, electronic, or other tangible or intangible form, including but not limited to:</p>
             <ul>
                 <li>Business plans, strategies, financial statements, projections, reports, and analyses.</li>
                 <li>Trade secrets, intellectual property, marketing strategies, and operational data.</li>
@@ -54,7 +54,7 @@
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">3. Obligations of the Receiving Party</h2>
-            The Receiving Party agrees:
+            <p>The Receiving Party agrees:</p>
             <ul>
                 <li>To maintain the confidentiality of the Confidential Information and not disclose it to any third party without the prior written consent of the Disclosing Party.</li>
                 <li>To use the Confidential Information solely for the purpose of evaluating a potential investment and not for any other purpose, including competing with the Disclosing Party.</li>
@@ -64,7 +64,7 @@
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">4. Exclusions</h2>
-            Confidential Information does not include information that:
+            <p>Confidential Information does not include information that:</p>
             <ul>
                 <li>Is or becomes publicly available through no breach of this Agreement by the Receiving Party.</li>
                 <li>Is rightfully received by the Receiving Party from a third party without an obligation of confidentiality.</li>
@@ -73,19 +73,19 @@
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">5. Term and Duration</h2>
-            This Agreement shall commence on the Effective Date and remain in effect for a period of 3 years from the date of disclosure. The obligations of confidentiality shall survive the termination of this Agreement for a period of 2 years thereafter.
+            <p>This Agreement shall commence on the Effective Date and remain in effect for a period of 3 years from the date of disclosure. The obligations of confidentiality shall survive the termination of this Agreement for a period of 2 years thereafter.</p>
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">6. No License or Ownership Rights</h2>
-            Nothing in this Agreement shall be construed as granting any license, ownership, or other rights to the Receiving Party over the Confidential Information or any intellectual property of the Disclosing Party.
+            <p>Nothing in this Agreement shall be construed as granting any license, ownership, or other rights to the Receiving Party over the Confidential Information or any intellectual property of the Disclosing Party.</p>
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">7. Remedies</h2>
-            The Receiving Party acknowledges that unauthorized disclosure or use of the Confidential Information may result in irreparable harm to the Disclosing Party. In addition to any other remedies available at law or in equity, the Disclosing Party shall be entitled to seek injunctive relief to prevent any actual or threatened breach of this Agreement.
+            <p>The Receiving Party acknowledges that unauthorized disclosure or use of the Confidential Information may result in irreparable harm to the Disclosing Party. In addition to any other remedies available at law or in equity, the Disclosing Party shall be entitled to seek injunctive relief to prevent any actual or threatened breach of this Agreement.</p>
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">8. Governing Law and Jurisdiction</h2>
-            This Agreement shall be governed by and construed in accordance with the laws of Republic of Turkey. Any disputes arising from or related to this Agreement shall be resolved exclusively in the courts of Turkey.
+            <p>This Agreement shall be governed by and construed in accordance with the laws of Republic of Turkey. Any disputes arising from or related to this Agreement shall be resolved exclusively in the courts of Turkey.</p>
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">9. Miscellaneous</h2>
@@ -98,7 +98,7 @@
         </div>
         <div class="nda-agreement-section">
             <h2 class="nda-agreement-section-title">IN WITNESS WHEREOF</h2>
-            The parties hereto have executed this Non-Disclosure Agreement as of the Effective Date.
+            <p>The parties hereto have executed this Non-Disclosure Agreement as of the Effective Date.</p>
             <p>Effective Date:</p>
             <p>Disclosing Party: Caravansary Capital</p>
             <p>By: __________________________</p>
