--- a/pages/learn-more.html
+++ b/pages/learn-more.html
@@ -39,26 +39,25 @@
             <div class="focus-item">
                 <h3 class="sub-title">Trade Facilitation</h3>
                 <ul class="list-items">
-                    <li>Establishing and managing Caravansary Trade Centers for import/export activities.</li>
-                    <li>Supporting businesses in cross-border trade, logistics, and regulatory compliance.</li>
-                    <li>Creating B2B platforms for suppliers, manufacturers, and distributors.</li>
+                    <li>Establishing and managing Caravansary Trade Centers that serves as hubs for import/export activities.</li>
+                    <li>Supporting businesses in navigating cross-border trade, logistics, and regulatory requirements.</li>
+                    <li>Creating platforms for B2B connections, fostering partnerships between suppliers, manufacturers, and distributors in the regions we serve.</li>
                 </ul>
             </div>
 
             <div class="focus-item">
                 <h3 class="sub-title">Industrial Development</h3>
                 <ul class="list-items">
-                    <li>Developing and managing Caravansary Industrial Parks.</li>
-                    <li>Providing infrastructure for manufacturing, warehousing, and logistics.</li>
-                    <li>Promoting industrial collaboration between West African and Turkish companies.</li>
+                    <li>Developing and managing Caravansary Industrial Parks, providing infrastructure for manufacturing, warehousing, and logistics.</li>
+                    <li>Promoting industrial collaboration between West African and Turkish companies to enhance value chains and drive economic growth.</li>
                 </ul>
             </div>
 
             <div class="focus-item">
                 <h3 class="sub-title">Tourism and MICE Industry</h3>
                 <ul class="list-items">
-                    <li>Developing Caravansary MICE Cities to attract business and leisure tourism.</li>
-                    <li>Focusing on the bleisure industry by integrating work, networking, and relaxation spaces.</li>
+                    <li>Developing Caravansary MICE Cities (Meetings, Incentives, Conferences, and Exhibitions) to attract business and leisure tourism.</li>
+                    <li>Focusing on the bleisure (business + leisure) industry by creating integrated spaces for work, networking, and relaxation.</li>
                 </ul>
             </div>
 
@@ -66,34 +65,34 @@
                 <h3 class="sub-title">Fund Management</h3>
                 <ul class="list-items">
                     <li>Raising and managing investment funds.</li>
-                    <li>Deploying capital into high-impact projects with long-term revenue potential.</li>
+                    <li>Structuring and deploying capital into high-impact projects with long-term revenue potential.</li>
                 </ul>
             </div>
         </section>
 
         <section class="content-section geo-scope">
             <h2 class="section-title">Geographic and Economic Scope</h2>
-            <p class="text-paragraph"><strong>Geographic Focus:</strong> Facilitating economic integration between West Africa and Turkey.</p>
-            <p class="text-paragraph"><strong>Economic Impact:</strong> Driving sustainable development, job creation, and economic diversification.</p>
+            <p class="text-paragraph"><strong>Geographic Focus:</strong> Facilitating economic integration and trade between West Africa and Turkey, leveraging strategic geographic and cultural ties.</p>
+            <p class="text-paragraph"><strong>Economic Impact:</strong> Driving sustainable development, job creation, and economic diversification in both regions.</p>
         </section>
 
         <section class="content-section key-services">
             <h2 class="section-title">Key Services</h2>
             <ul class="list-items">
-                <li><strong>Project Development:</strong> Identifying and executing large-scale projects.</li>
-                <li><strong>Investment Facilitation:</strong> Attracting investors and structuring investment vehicles.</li>
-                <li><strong>Operational Management:</strong> Managing trade centers, industrial parks, and tourism hubs.</li>
-                <li><strong>Advisory Services:</strong> Providing expertise in market entry and trade optimization.</li>
+                <li><strong>Project Development:</strong> Identifying, planning, and executing large-scale infrastructure and trade-related projects.</li>
+                <li><strong>Investment Facilitation:</strong> Attracting investors and structuring investment vehicles for high-growth opportunities.</li>
+                <li><strong>Operational Management:</strong> Overseeing the development and ongoing management of trade centers, industrial parks, and tourism hubs.</li>
+                <li><strong>Advisory Services:</strong> Providing expertise in market entry, regulatory compliance, and trade optimization for businesses.</li>
             </ul>
         </section>
 
         <section class="content-section strategic-vision">
             <h2 class="section-title">Strategic Vision</h2>
-            <p class="text-paragraph">Caravansary Capital positions itself as a bridge between economies, fostering collaboration, innovation, and growth by:</p>
+            <p class="text-paragraph">Caravansary Capital positions itself as a bridge between economies, fostering collaboration, innovation, and growth through:</p>
             <ul class="list-items">
                 <li>Leveraging its deep understanding of regional markets.</li>
                 <li>Building infrastructure that supports trade, industry, and tourism.</li>
-                <li>Creating sustainable revenue streams while generating value for investors and communities.</li>
+                <li>Creating sustainable revenue streams while generating value for investors and local communities.</li>
             </ul>
         </section>
 
