--- a/pages/nda-agreement.html
+++ b/pages/nda-agreement.html
@@ -35,7 +35,7 @@
 
         <div class="nda-agreement-section">
             <p>This Non-Disclosure Agreement ("Agreement") is made and entered into as of the Effective Date (defined below) by and between:</p>
-            <p>Caravansary Capital, a company duly incorporated and operating under the laws of Lebanon, with its principal place of business at 22 nd November Road, 1769 Bld. 1st Floor, Kaskas, Beirut, Lebanon ("Disclosing Party"), and [Investor Name], an individual/entity with its principal place of business at __________________________________________________________ ("Receiving Party").</p>
+            <p>Caravansary Capital, a company duly incorporated and operating under the laws of Lebanon, with its principal place of business at 22<sup>nd</sup> November Road, 1769 Bld. 1st Floor, Kaskas, Beirut, Lebanon ("Disclosing Party"), and [Investor Name], an individual/entity with its principal place of business at __________________________________________________________ ("Receiving Party").</p>
         </div>
 
         <div class="nda-agreement-section">
