Fixed Spelling and file paths

--- a/pages/investor.html
+++ b/pages/investor.html
@@ -41,7 +41,7 @@
             </p>
 
             <div class="investor-link">
-                <a href="/contact-forms.html#investor-screening" class="btn-investor">Apply for Investor Screeening</a>
+                <a href="contact-forms.html#investor-screening" class="btn-investor">Apply for Investor Screeening</a>
             </div>
         </div>
 
@@ -58,7 +58,7 @@
 
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor.html">Investor Opportunities</a></li>
+                    <li><a href="investor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
