--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -126,7 +126,7 @@
 
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor.html">Investor Opportunities</a></li>
+                    <li><a href="investor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
