--- a/pages/services.html
+++ b/pages/services.html
@@ -44,8 +44,8 @@
                 </p>
 
                 <div class="services-link">
-                    <a href="/contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
-                    <a href="/contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
+                    <a href="contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
+                    <a href="contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
 
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor.html">Investor Opportunities</a></li>
+                    <li><a href="investor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
