--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -70,7 +70,7 @@
 
             <div class="footer-links">
                 <ul>
-                    <li><a href="inverstor.html">Investor Opportunities</a></li>
+                    <li><a href="invertor.html">Investor Opportunities</a></li>
                     <li><a href="contact-forms.html">Contact Forms</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
