Changed some file paths

--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -26,7 +26,7 @@
             <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </nav>
-
+    
     <section class="services">
 
         <div class="services-container">
