--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
