--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="logo">
             <a href="index.html">
-                <img src="../images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
+                <img src="images/Caravansary Logo.jpeg" alt="Caravansary Capital Logo">
             </a>
         </div>
         <input type="checkbox" id="menu-toggle">
@@ -30,7 +30,7 @@
     <section class="hero">
 
         <video autoplay muted loop id="hero-video" playsinline>
-            <source src="../images/12831782_1080_1920_30fps.mp4" type="video/mp4">
+            <source src="images/12831782_1080_1920_30fps.mp4" type="video/mp4">
             Your browser does not support the video tag
         </video>
 
