Fixed and Added Things

--- a/explore-opportunities.html
+++ b/explore-opportunities.html
@@ -19,7 +19,13 @@
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
         <ul class="nav-links">
-            <li><a href="about-us.html">About Us</a></li>
+            <li class="dropdown">
+                <a href="about-us.html">About Us</a>
+                <ul class="dropdown-menu">
+                    <li><a href="learn-more.html">Learn More About Us</a></li>
+                    <li><a href="explore-opportunities.html">Explore Opportunities</a></li>
+                </ul>
+            </li>
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="contact-forms.html">Contact Forms</a></li>
@@ -84,6 +90,10 @@
         <section class="explore-cta">
             <h2 class="explore-section-title explore-cta-button">Discover how you can be part of this transformative vision.</h2>
             <h2 class="explore-cta-button">Request More Information &amp; Schedule a Private Briefing</h2>
+        </section>
+
+        <section class="explore-link">
+            <a href="contact-forms.html" class="btn-explore">Contact Forms</a>
         </section>
         
     </section>
