--- a/learn-more.html
+++ b/learn-more.html
@@ -19,7 +19,13 @@
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
         <ul class="nav-links">
-            <li><a href="about-us.html">About Us</a></li>
+            <li class="dropdown">
+                <a href="about-us.html">About Us</a>
+                <ul class="dropdown-menu">
+                    <li><a href="learn-more.html">Learn More About Us</a></li>
+                    <li><a href="explore-opportunities.html">Explore Opportunities</a></li>
+                </ul>
+            </li>
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="contact-forms.html">Contact Forms</a></li>
@@ -105,6 +111,10 @@
                 <li>Real Estate and Infrastructure</li>
                 <li>Tourism and Hospitality</li>
             </ul>
+        </section>
+
+        <section class="learn-more-link">
+            <a href="explore-opportunities.html" class="btn-learn-more">Explore Opportunities</a>
         </section>
 
     </section>
