--- a/services.html
+++ b/services.html
@@ -19,7 +19,13 @@
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
         <ul class="nav-links">
-            <li><a href="about-us.html">About Us</a></li>
+            <li class="dropdown">
+                <a href="about-us.html">About Us</a>
+                <ul class="dropdown-menu">
+                    <li><a href="learn-more.html">Learn More About Us</a></li>
+                    <li><a href="explore-opportunities.html">Explore Opportunities</a></li>
+                </ul>
+            </li>
             <li><a href="services.html">Services</a></li>
             <li><a href="investor.html">Investor Opportunities</a></li>
             <li><a href="contact-forms.html">Contact Forms</a></li>
@@ -44,8 +50,8 @@
                 </p>
 
                 <div class="services-link">
-                    <a href="contact-forms.html#investor-screening" class="btn-services">Apply for Investor Screeening</a>
-                    <a href="contact-forms.html#strategic-partnership" class="btn-services">Apply for Strategic Partnership</a>
+                    <a href="contact-forms.html#investor-screening" class="btn-services">Investor Screeening Form</a>
+                    <a href="contact-forms.html#strategic-partnership" class="btn-services">Strategic Partnership Form</a>
                 </div>
             </div>
         </div>
